# ClashSubGenerator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: GitVersion.cmake  LoadOptional.cmake
src/: base64.cpp  base64.h  clash_generator.cpp  clash_generator.h  clash_sub_generator.cpp  clash_sub_generator.h  clash_subscriber.cpp  config.h  config_loader.cpp  config_loader.h  enum_mapper.h  enumerate.h  filesystem.cpp  filesystem.h  hash.cpp  hash.h  httpclient.cpp  httpclient.h  main.cpp  proxy_generator.cpp  proxy_generator.h  rule_extractor.cpp  rule_extractor.h  shadowsocks_subscriber.cpp  shadowsocks_subscriber.h  shadowsocksr_subscriber.cpp  shadowsocksr_subscriber.h  subscriber.cpp  subscriber.h  uri.cpp  uri.h  utils.cpp  utils.h  v2ray_subscriber.cpp  v2ray_subscriber.h  version.cpp  version.h.in  yaml_helper.cpp  yaml_helper.h
src/exception/: config_parse_exception.h  csg_exeption.h  file_not_exists_exception.h  file_system_exception.h  file_write_exception.h  invalid_http_status_exception.h  invalid_uri_exception.h  invalid_value_exception.h  invalid_yaml_excaption.h  missing_key_exception.h  request_failure_exception.h  unsupported_configuration.h
src/proxy_decoder/: proxy_decoder.cpp  proxy_decoder.h  proxy_decoder_factory.cpp  proxy_decoder_factory.h  shadowsocks_decoder.cpp  shadowsocks_decoder.h  shadowsocksr_decoder.cpp  shadowsocksr_decoder.h  socks5_decoder.cpp  socks5_decoder.h  trojan_decoder.cpp  trojan_decoder.h  vmess_decoder.cpp  vmess_decoder.h
src/subscriber/: clash_subscriber.cpp  clash_subscriber.h  other_subscriber.cpp  other_subscriber.h  subscriber.cpp  subscriber.h  subscriber_factory.cpp  subscriber_factory.h
